--- a/frontend/src/Pages/UniversityModule/css/styles.css
+++ b/frontend/src/Pages/UniversityModule/css/styles.css
@@ -323,6 +323,40 @@
   border: none;
   background-color: #f9f9f9;
 }
+.resultSelectorbody{
+  position: absolute;
+  background-color: #c0c0c0;
+  margin-top: 5%;
+  margin-left: 25%;
+  width: 70%;
+  border-radius: 10px;
+}
+.resultselector{
+  font-size: 1.2rem;
+  width: 70%;
+  background-color: #D9D9D3;
+  border-radius: 7px;
+  margin-left: 2%;
+}
+.publishbutton{
+  background-color: #536674;
+  color: whitesmoke;
+  cursor: pointer;
+ 
+  margin-bottom: 2%;
+  font-size: 1.4rem;
+  border: none;
+  border-radius: 10px;
+  margin-left: 5%;
+}
+.publishbutton:hover{
+  background-color: #c0c0c0;
+  color: black
+}
+.latestresultheading{
+  font-size: 1.5rem;
+  margin-left: 2%;
+}
 @media (max-width:1432px) {
     .maintableforinstitution{
         width: 70%;
