--- a/frontend/src/Pages/UniversityModule/css/styles.css
+++ b/frontend/src/Pages/UniversityModule/css/styles.css
@@ -357,6 +357,34 @@
   font-size: 1.5rem;
   margin-left: 2%;
 }
+.certificateSelectorbody{
+  position: absolute;
+  margin-left: 25%;
+  margin-top: 7%;
+  width: 70%;
+  border-radius: 10px;
+  background-color: #c0c0c0;
+}
+.generatebutton{
+  margin-top: 2%;
+  background-color: #536674;
+  color: whitesmoke;
+  cursor: pointer;
+ 
+  margin-bottom: 1%;
+  font-size: 1.3rem;
+  border: none;
+  border-radius: 10px;
+  margin-left: 5%;
+}
+.generatebutton:hover{
+  background-color: #c0c0c0;
+  color: black
+}
+.generatedtext{
+  padding-bottom: 5px;
+  margin-left: 5%;
+}
 @media (max-width:1432px) {
     .maintableforinstitution{
         width: 70%;
@@ -407,6 +435,12 @@
   }
   .updatecollegemainbuttonsymbol{
     margin-left: 20%;
+  }
+  .certificateSelectorbody{
+    margin-left: 35%;
+    margin-top: 7%;
+    width: 60%;
+   
   }
 }
 @media (max-width:817px) {
