--- a/frontend/src/Pages/EmployeeModule/css/styles.css
+++ b/frontend/src/Pages/EmployeeModule/css/styles.css
@@ -6,3 +6,10 @@
     background-color: #536674;
     color: whitesmoke;
 }
+.hometable{
+    margin-top: 1%;
+    margin-left: 36%;
+    font-size: 1.2rem;
+    line-height: 1.4rem;
+    width: 30%;
+}
