--- a/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
+++ b/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
@@ -56,28 +56,32 @@ tr:nth-child(even){
   background-color: #C0C0C0;
   width: 70%;
   text-align: center;  
+  display:flex;
+  justify-content: flex-start;
 }
 .semesterselectorbody > div{
-  margin-right: 4%;
+  margin-right: 2%;
 }
 .semesterselecttext {
   font-size: 23px;
   margin-left:1.5% ;
-  margin-top: 1.5%;
+  margin-top: 1.3%;
+
 }
 .semesterselector{
   width: 8%;
-  margin-top: 1.5%;
-  margin-left: 43%;  
+  margin-top: 1.3%;
 }
+
 .semesterselector select {
   width: 100%;
   height: 26px;
   font-size: 18px;
-  margin-left: 5%;
+  background-color: #dddddd;
+  border-radius: 10px;
 }
 .selectorbutton {
-  margin-top: 1.5%;
+  margin-top: 1.3%;
 }
 .setHeight{
   margin-top: 5%;
