--- a/frontend/src/Pages/EmployeeModule/css/EmployeeHomepageBody.module.css
+++ b/frontend/src/Pages/EmployeeModule/css/EmployeeHomepageBody.module.css
@@ -1,12 +1,13 @@
 .studenthomepagebody {
   display: flex;
-  height: 83vh;
+  height: 100%;
   margin-top: 1%;
-}table{
+}
+.hometable{
   margin-left: 23%;
   margin-bottom: 4%;
 }
-.semesterselectorbody p{
+.employertext{
 
   font-size: 1.5rem;
 }
@@ -16,7 +17,7 @@
 }
 .studenthomepagesidebar {
   background-color: #536674;
-  height: 100%;
+  height: 83vh;
   width: 19%;
   border-top-right-radius: 20px;
 }
@@ -103,9 +104,8 @@
 
 .navbarlogobutton {
   margin-top: 0.1%;
-  margin-left: 90%;
-  position: fixed;
-  display: inline-block;
+  margin-left: -10%;
+
 }
 .navbarlogobutton img {
   width: 24px;
@@ -128,7 +128,7 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  margin-left: -100%;
+ margin-left: -6%;
 }
 
 .dropdowncontent button {
@@ -168,6 +168,15 @@
   width: 30px;
 }
 
+
+@media (max-width: 1337px) {
+  .dropdowncontent{
+    margin-left: -6%;
+  }
+  .navbarlogobutton{
+    margin-left: -14%;
+  }
+}
 @media (max-width: 1049px) {
   .dropbtn {
     font-size: 26px;
@@ -190,9 +199,7 @@
 }
 
 @media (max-width: 1530px) {
-  .studenthomepagebody {
-    height: 87vh;
-  }
+
   .selectorbutton button {
     margin-left: 15%;
   }
