--- a/frontend/src/Pages/EmployeeModule/css/styles.css
+++ b/frontend/src/Pages/EmployeeModule/css/styles.css
@@ -13,3 +13,18 @@
     line-height: 1.4rem;
     width: 30%;
 }
+.studenthomepagesidebarlow {
+    background-color: #536674;
+    height:83vh;
+    width: 19%;
+    border-top-right-radius: 20px;
+  }
+  .studenthomepagesidebarhigh {
+    background-color: #536674;
+    height: 282vh;
+    width: 19%;
+    border-top-right-radius: 20px;
+  }
+  .logobutton{
+    background-color: #FFFFF0;
+  }
