--- a/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
+++ b/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
@@ -28,14 +28,14 @@
 .studentInfoContainer{
   margin: 1rem;
 }
-td{
+/* td{
   border: 2px solid #dddddd;
   text-align: left;
   padding-top: 3%;
 }
 tr:nth-child(even){
   background-color: #a0a7ac;
-}
+} */
 .studenthomepagesidebar {
   background-color: #536674;
   height: 100%;
