--- a/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
+++ b/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
@@ -15,7 +15,7 @@
 
 .studentdetailstable1{
   margin-left: 1%;
-
+  border: 1px solid whitesmoke;
   margin-top: 2%;
   border-collapse: collapse;
   font-size: 21px;
