--- a/frontend/src/Pages/UniversityModule/css/styles.css
+++ b/frontend/src/Pages/UniversityModule/css/styles.css
@@ -96,6 +96,14 @@
     background-color:#D9D9D3;
   }
   .institutioncollegeidinput{
+    margin-left: 3.3rem;
+    width: 40%;
+    line-height: 1.5rem;
+    border-radius: 15px;
+    border: none;
+    background-color:#D9D9D3;
+  }
+  .institutioncollegeidinput1{
     margin-left: 1.5rem;
     width: 40%;
     line-height: 1.5rem;
