--- a/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
+++ b/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
@@ -20,10 +20,12 @@
   border-collapse: collapse;
   font-size: 21px;
   width: 100%;
+  margin-bottom: 4%;
 }
 
 .studentDetailstext{
   font-size: 1.6rem;
+  
 }
 .studentInfoContainer{
   margin: 1rem;
