--- a/frontend/src/Pages/EmployeeModule/css/styles.css
+++ b/frontend/src/Pages/EmployeeModule/css/styles.css
@@ -24,7 +24,7 @@
   }
   .studenthomepagesidebarhigh {
     background-color: #536674;
-    height: 375vh;
+    height: 520vh;
     width: 19%;
     border-top-right-radius: 20px;
   }
@@ -62,4 +62,37 @@
 
 .navbarlogobutton{
     display: block;
+}
+@media (max-width: 1796px) {
+  .studenthomepagesidebarhigh {
+
+    height: 540vh;
+ 
+  }
+  
+}
+@media (max-width: 1374px) {
+  .studenthomepagesidebarhigh {
+    height: 560vh;
+  }
+}
+@media (max-width: 1322px) {
+  .studenthomepagesidebarhigh {
+    height: 580vh;
+  }
+}
+@media (max-width: 1244px) {
+  .studenthomepagesidebarhigh {
+    height: 610vh;
+  }
+}
+@media (max-width: 1195px) {
+  .studenthomepagesidebarhigh {
+    height: 630vh;
+  }
+}
+@media (max-width: 1134px) {
+  .studenthomepagesidebarhigh {
+    height: 650vh;
+  }
 }
