--- a/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
+++ b/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
@@ -141,12 +141,12 @@
   justify-content: space-between;
 }
 
-.navbar button{
+/* .navbar button{
   cursor: pointer;
   border: none;
   border-radius: 10px;
   font-size: 22px;
-}
+} */
 .homeButton {
   background-color: #add8e6;
 }
@@ -184,8 +184,8 @@
   color: rgb(0, 0, 0);
   display: block;
   border: none;
-  font-size: 1.1rem;
-  
+  font-size: 16px;
+  border-radius: 10px; 
 }
 .changepass{
   display: inline-block;
@@ -199,6 +199,7 @@
   display: flex;
   justify-content: flex-start;
   margin-top: 5%;
+  font-size: 14px;
  
 }
 
