--- a/frontend/src/Pages/EmployeeModule/css/styles.css
+++ b/frontend/src/Pages/EmployeeModule/css/styles.css
@@ -111,3 +111,94 @@
     height: 710vh;
   }
 }
+@media (max-height:996px) {
+  .studenthomepagesidebarhigh {
+    height: 580vh;
+  }
+}
+@media (max-height:887px) {
+  .studenthomepagesidebarhigh {
+    height: 600vh;
+  }
+}
+@media (max-height:860px) {
+  .studenthomepagesidebarhigh {
+    height: 620vh;
+  }
+}
+@media (max-height:839px) {
+  .studenthomepagesidebarhigh {
+    height: 640vh;
+  }
+}
+@media (max-height:811px) {
+  .studenthomepagesidebarhigh {
+    height: 660vh;
+  }
+}
+@media (max-height:785px) {
+  .studenthomepagesidebarhigh {
+    height: 680vh;
+  }
+}
+@media (max-height:760px) {
+  .studenthomepagesidebarhigh {
+    height: 700vh;
+  }
+}
+@media (max-height:747px) {
+  .studenthomepagesidebarhigh {
+    height: 720vh;
+  }
+}@media (max-height:714px) {
+  .studenthomepagesidebarhigh {
+    height: 740vh;
+  }
+}
+@media (max-height:701px) {
+  .studenthomepagesidebarhigh {
+    height: 760vh;
+  }
+}
+@media (max-height:682px) {
+  .studenthomepagesidebarhigh {
+    height: 780vh;
+  }
+}
+@media (max-height:660px) {
+  .studenthomepagesidebarhigh {
+    height: 800vh;
+  }
+}
+@media (max-height:645px) {
+  .studenthomepagesidebarhigh {
+    height: 825vh;
+  }
+}
+@media (max-height:625px) {
+  .studenthomepagesidebarhigh {
+    height: 850vh;
+  }
+}
+@media (max-height:610px) {
+  .studenthomepagesidebarhigh {
+    height: 885vh;
+  }
+}
+@media (max-height:581px) {
+  .studenthomepagesidebarhigh {
+    height: 910vh;
+  }
+}
+@media (max-height:556px) {
+  .studenthomepagesidebarhigh {
+    height: 940vh;
+  }
+}
+
+
+
+
+
+
+
