--- a/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
+++ b/frontend/src/Pages/StudentModule/css/StudentHomepageBody.module.css
@@ -210,7 +210,13 @@
   margin-top: 10%;
   margin-left: 23%;
 }
-
+.error{
+  position: absolute;
+  font-size: 1.7rem;
+  color: rgb(153, 49, 49);
+  margin-top: 10%;
+  margin-left: 50%;
+}
 @media (max-width:1730px) {
   .resultSelectorBody{
     margin-top: 10%;
