--- a/frontend/src/Pages/UniversityModule/css/styles.css
+++ b/frontend/src/Pages/UniversityModule/css/styles.css
@@ -149,24 +149,33 @@
     font-size: 1.5rem;
     margin-left: 3rem;
   }
+  .maininstitutiondelete{
+    position: absolute;
+    margin-left: 27%;
+    margin-top: 5%;
+    width: 65%;
+    height: 60%;
+    background-color: #c0c0c0;   
+  }
   .maininstitution{
     position: absolute;
-    margin-left: 23%;
-    margin-top: 4%;
-    width: 75%;
-    height: 70%;
+    margin-left: 27%;
+    margin-top: 5%;
+    width: 65%;
+    height: 15%;
     background-color: #c0c0c0;
   }
   .maininstitutionsearchinputbutton{
     display: flex;
     justify-content: center;
-    margin-top: 1%;
+    margin-top: 4%;
   }
   .maininstitutionsearchinput{
     width: 25%;
     border: none;
     border-radius: 10px;
     background-color: #ebebe1;
+    
   }
   .maininstitutionsearchbutton{
     background-color: #536674;
@@ -178,7 +187,7 @@
   }
   .allinstitutiontext{
     font-size: 1.4rem;
-    margin-left: 2%;
+    margin-right: 1%;
   }
   .spacebetween{
     width: 100%;
