--- a/frontend/src/Pages/UniversityModule/css/styles.css
+++ b/frontend/src/Pages/UniversityModule/css/styles.css
@@ -255,6 +255,7 @@
     background-color: #c0c0c0;
     position: absolute;
     margin-left: 35%;
+    margin-top: 3%;
   }
 .addCoursesText{
   font-size: 1.3rem;
